# network_security_project

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  train.py
